# LLSTauTools

./: .gitignore  CMakeLists.txt  README.md
config/: crab_SUS-RunIIFall18GS.cfg  gc_June20_Embedded16_ElTau.cfg  gc_SUS-RunIIFall18GS.cfg
inc/: AC1B.h  FileTools.h  Functions.h  GenLepton.h  GenLeptonNano.h  TauTuple.h
notebook/: DeepTauSpecrumInspect.ipynb
notebook/.ipynb_checkpoints/: DeepTauSpecrumInspect-checkpoint.ipynb
python/: DrawUtils.py  FWLite_GEN-SIM-RECO.py  FWLite_GEN-SIM-RECO_plot.py  Functions.py  LifeTimeEffPlotter.py  LifeTimeEffPlotterTauTuple.py  LifeTimeEfficiencyPlotter.py  PlotPtReco.py  pt_reco.py
scripts/: DF-JetKinemCompare.py  DF-JetSubstStat.py  DF-MassPointsKinem.py  DF-PfCandInputStudy.py  DF-PfCandInputStudy_etaphi2D.py  DF-PfCandInputStudy_vertex.py  FWLite_GEN-SIM-RECO.py  FWLite_GEN-SIM-RECO_plot_compare.py  FWLite_GEN-SIM-RECO_plot_etapt.py  FWLite_GEN-SIM-RECO_printChain.py  FWLite_MINIAOD_genJet_genParticle.py  HitsVsDispStudy.py  LifeTimeEffPlotterTauTuple.py  LifeTimeVsDisplacement.py  MassPointStat.py  MassPointsKinem.py  NANO-DF-ScoreStudy_Kind.py  PfCandStudy.py  PlotPfCandReco.py  PlotPfCandReco_onlyratio.py  PrintGenTruth.py  gc_FailDataChecker.sh  main_tests.cpp  pt_reco.py
src/: AC1B.cc  exception.cpp
